--- a/css/style.css
+++ b/css/style.css
@@ -109,4 +109,9 @@ SUGESTÃO DE ESTRUTURAÇÃO BASE
 			width: 500px;
 			height: 600px;
 		}
+		.topo {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
 	}
